[package]
name = "future-takeover-program-sdk"
version = "0.1.0"
description = "Created with Anchor-IDLGen"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "future_takeover_program_sdk"

[dependencies]
anchor-lang = "0.30.0"
anchor-i11n = { git = "https://github.com/deanmlittle/anchor-i11n.git" }