[package]
name = "future-takeover-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "future_takeover_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["metadata"] }
jupiter-sdk = { path = "../../i11n/jupiter" }
raydium-cp-swap-sdk = { path = "../../i11n/raydium_cp_swap" }
future-takeover-program-sdk = { path = "../../i11n/future_takeover_program" }
